# OscTap

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  style.yml
android/: CMakeLists.txt  OscTap.kt  osctap_jni.cpp
demos/: osc_send.cpp  pi5_hub.cpp  tcp_send.cpp  tcp_server.cpp
docs/: API.md  EMBEDDED_PICO2W.md  GETTING_STARTED.md  HERITAGE.md  INTEGRATION_PI5_PICO_ANDROID.md  OSC_OVER_TCP.md  STATUS.md
docs/legacy/: README.md
examples/: OscDump.cpp  SimpleReceive.cpp  SimpleSend.cpp
fuzz/: README.md  fuzz_deframe.cpp  fuzz_parse.cpp  standalone_main.cpp
fuzz/corpus/: bundle.osc  msg_blob_string.osc  msg_simple.osc  msg_types_array.osc
fuzz/corpus_deframe/: bundle.osc.framed  msg_blob_string.osc.framed  msg_simple.osc.framed  msg_types_array.osc.framed  multi.framed
oscpack/: README.md
oscpack/ip/: AbstractUdpSocket.h  IpEndpointName.h  NetworkingUtils.h  PacketListener.h  TcpSocket.h  TimerListener.h  UdpSocket.h
oscpack/ip/posix/: NetworkingUtils.h  UdpSocket.h
oscpack/ip/win32/: NetworkingUtils.h  UdpSocket.h
oscpack/osc/: MessageMappingOscPacketListener.h  OscConfig.h  OscDebug.h  OscException.h  OscHostEndianness.h  OscOutboundPacketStream.h  OscPacketListener.h  OscPrintReceivedElements.h  OscReceivedElements.h  OscStreamFraming.h  OscTypes.h  OscTypesTraits.h  OscUtilities.h  SmallString.h
osctap/ip/: AbstractUdpSocket.h  IpEndpointName.h  NetworkingUtils.h  PacketListener.h  TcpSocket.h  TimerListener.h  UdpSocket.h
osctap/ip/posix/: NetworkingUtils.h  TcpSocket.h  UdpSocket.h
osctap/ip/win32/: NetworkingUtils.h  TcpSocket.h  UdpSocket.h
osctap/osc/: MessageMappingOscPacketListener.h  OscConfig.h  OscDebug.h  OscException.h  OscHostEndianness.h  OscOutboundPacketStream.h  OscPacketListener.h  OscPrintReceivedElements.h  OscReceivedElements.h  OscStreamFraming.h  OscTypes.h  OscTypesTraits.h  OscUtilities.h  SmallString.h
tests/: CompatIncludeShim.cpp  OscConcurrencyTest.cpp  OscFreestandingTest.cpp  OscLatencyBench.cpp  OscMulticastTest.cpp  OscRealtimeTest.cpp  OscStreamFramingTest.cpp  OscTcpTest.cpp  OscUdpTest.cpp  OscUnitTests.cpp  OscUnitTests.h  OscValidateTest.cpp  Win32SocketSmoke.cpp
